test/bad/ex2.cb
// tail expression of if-else have to have the same type
def main() {
    let x = if true {
        5
    } else {
        true
    }
}
